--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@ ul {
   list-style: none;
 }
 
+
+
 .section-title {
 font-weight: 700;
 font-size: 36px;
@@ -68,12 +70,14 @@ letter-spacing: 0.03em;
 
 .buttons-style {
   /* background-color: var(--accent-color); */
-  /* color: #FFFFFF;  */
+  font-family: inherit;
+  font-style: 400;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+  color: var(--text-main-color);
 }
 
 .buttons-style:hover,
@@ -122,6 +126,10 @@ letter-spacing: 0.03em;
 
 .header-nav-link:hover,
 .header-nav-link:focus {
+  color: var(--accent-color);
+}
+
+.current {
   color: var(--accent-color);
 }
 
