--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 /* header background color #FFFFFF; */
 /* hero background color #2F303A; */
-/* body background color #E5E5E5; */
+/* body background color #FFFFFF; */
 /* team color background color #F5F4FA */
 /* footer background #2F303A; */
 /* accent color #2196F3; */
 
 :root {
-  --main-bgc: #E5E5E5;
+  --main-bgc: #FFFFFF;
   --seconr-bgc: #F5F4FA;
   --accent-color: #2196f3;
   --hero-footer-background-color: #2F303A;
@@ -68,17 +68,7 @@ line-height: 1.18;
 letter-spacing: 0.03em;
 }
 
-.buttons-style {
-  /* background-color: var(--accent-color); */
-  font-family: inherit;
-  font-style: 400;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--text-main-color);
-}
+
 
 .buttons-style:hover,
 .buttons-style:focus {
@@ -93,13 +83,13 @@ letter-spacing: 0.03em;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  background: #ffffff;
+  background:var(--main-bgc);
 }
 
 .logo {
   font-family: "Raleway", sans-serif;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -109,11 +99,21 @@ letter-spacing: 0.03em;
 .logo .logo-blue {
   font-family: "Raleway", sans-serif;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+}
+
+.logo .logo-white {
+  font-family: Raleway;
+font-style: normal;
+font-weight: bold;
+font-size: 26px;
+line-height: 1.19;
+letter-spacing: 0.03em;
+color: #FFFFFF;
 }
 
 .header-nav-link {
@@ -158,8 +158,7 @@ color: #FFFFFF;
 }
 
 .hero-button {
-  background-color: var(--accent-color);
-  color: #FFFFFF; 
+  font-family: Roboto;
   cursor: pointer;
   font-weight: 700;
   font-size: 16px;
@@ -168,11 +167,17 @@ color: #FFFFFF;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em; 
+  
+  background-color: var(--accent-color);
+  color: #FFFFFF;
 }
 
 .hero-button:hover,
 .hero-button:focus {
-  color: var(--accent-color);
+  background: #188CE8;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+color: #fff;
 }
 
 /* --------Features--------- */
@@ -225,9 +230,39 @@ color: rgba(255, 255, 255, 0.6);
 .footer-link-contacts:focus {
   color: var(--accent-color);} 
 
-/* ------Focus------- */
+/* ------Filter------- */
 
+.filters-list {
+  display: flex;
+  justify-content: center;
+}
 
+.filters-list-item:not( :last-child) {
+  margin-right: 8px;
+}
+
+.filter-buttons {
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  background-color: var(--seconr-bgc);
+  border-radius: 4px;  
+  color: var(--text-main-color);
+  border: transparent;
+  cursor: pointer;
+}
+
+.filter-buttons:hover,
+.filter-buttons:focus {
+  background: #2196F3;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+  color: #FFFFFF;
+}
 
 /* ----Project------- */
 
